modify gitignore to work with hg

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+syntax: glob
+
 .gradle
-/local.properties
-/.idea
-/*.iml
-/app/*.iml
+local.properties
+.idea
+*.iml
+app/*.iml
 .DS_Store
-/build
-/jpbc
-/sugar
+build
+jpbc
+sugar
+.hg
+.hgignore
+.git
