server should now run on cs host server

--- a/pkg/build.gradle
+++ b/pkg/build.gradle
@@ -4,3 +4,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':crypto')
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'neilw4.omin.PKG'
+    }
+}
