--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    dexOptions {
+        preDexLibraries = false
+    }
 }
 
 repositories {
