gradle installs Android SDK if not found

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:0.12.+'
+    classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
+  }
+}
+
+apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 
 android {
