--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,8 @@ allprojects {
     repositories {
         jcenter()
     }
+    tasks.withType(JavaCompile) { 
+        sourceCompatibility = "1.7"
+        targetCompatibility = "1.7" 
+    }
 }
