--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.github.satyan:sugar:1.3'
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
     compile project(':crypto')
 }
